# multimodal-rag-pdf-qwen2.5vl

./: .gitignore  README.md  TECHNICAL_GUIDE.md  client_example.py  debug_image_issue.py  install.py  main.py  multimodal_rag.py  ollama_client.py  pdf_processor.py  pyproject.toml  requirements.txt  start.py  test_bbox_fix.py  test_image_validation.py  test_ocr.py  test_spatial_features.py  test_system.py  vector_store.py
